# cmake-options

./: README.md
project_B/: CMakeLists.txt
project_B/project_A/: CMakeLists.txt
